--- a/css/index.css
+++ b/css/index.css
@@ -13,3 +13,11 @@ body{background-image: url(../images/8.jpg);background-size: cover}
 .buhao{width: 100px;height: 50px;background-image: url(../images/no.png);position: absolute;right: 550px;top: 230px;display: none}
 .start{width: 400px;height: 150px;font-size: 80px;font-weight: bold;text-align: center;line-height: 150px;position: absolute;top: 170px;left: 50%;margin-left: -200px;cursor: pointer;background-color: white;border-radius: 20px;}
 .chongxinkaishi{position: absolute;top: 450px;right:30px;width: 300px;height: 100px;font-size: 60px;text-align: center;font-weight: bold;border:4px solid black;border-radius:10px;line-height: 100px;cursor: pointer;display: none}
+
+@media(max-width: 375px){
+	#sence{width: 360px;height: 360px;}
+	.block{width: 11px;height: 11px;}
+	.tips{width: 100px;height: 230px;top: 20px;left: 5px;background-size: 100px 230px}
+	.defen{width: 200px;height: 150px;top: 365px;right:170px;background-size: 200px 150px}
+	.num{width: 100px;height: 150px;top: 370px;right:50px }
+}
